# spotify-notifications-bot

./: .gitignore  Pipfile  README.md  bot.py  config.json.example  excel.py  pyproject.toml  requirements.txt  schemas.py  subscribers.xlsx
